--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 # ------------------------------------------------------------------------------
 
 # Travis CI binaries (comment this out with a ';' when building for your own board)
-default_envs = travis_esp8266, travis_esp32
+; default_envs = travis_esp8266, travis_esp32
 
 # Release binaries
 ; default_envs = nodemcuv2, esp01_1m_full, esp32dev, custom_WS2801, custom_APA102, custom_LEDPIN_16, custom_LEDPIN_4, custom_LEDPIN_3, custom32_LEDPIN_16, custom32_APA102
@@ -26,6 +26,8 @@ default_envs = travis_esp8266, travis_esp32
 ; default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
 ; default_envs = esp32dev
+; default_envs = custom32_TOUCHPIN_T0
+default_envs = custom32_TOUCHPIN_T02
 ; default_envs = esp8285_4CH_MagicHome
 ; default_envs = esp8285_4CH_H801
 ; default_envs = esp8285_5CH_H801
@@ -286,6 +288,8 @@ build_flags = ${common.build_flags_esp8266} -D LEDPIN=1 -D WLED_DISABLE_INFRARED
 [env:esp32dev]
 board = esp32dev
 platform = espressif32@2.0
+upload_port = COM7
+upload_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32} 
 lib_ignore =
@@ -424,11 +428,25 @@ lib_ignore =
 [env:custom32_TOUCHPIN_T0]
 board = esp32dev
 platform = espressif32@2.0
+upload_port = COM7
+upload_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32} -D TOUCHPIN=T0
 lib_ignore =
   ESPAsyncTCP
   ESPAsyncUDP
+
+[env:custom32_TOUCHPIN_T02]
+board = esp32dev
+platform = espressif32@2.0
+upload_port = COM5
+upload_speed = 115200
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32} -D TOUCHPIN=T0
+lib_ignore =
+  ESPAsyncTCP
+  ESPAsyncUDP
+
 
 [env:wemos_shield_esp32]
 board = esp32dev
