output of sensor id to serial and added compile flags
resolution and conversion time as compile flags

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,8 +26,9 @@
 ; default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
 ; default_envs = esp32dev
-; default_envs = custom32_TOUCHPIN_T0
-default_envs = custom32_TOUCHPIN_T02
+default_envs = custom32_TOUCHPIN_T0_usermod_dallas_temperature_C
+;default_envs = custom32_TOUCHPIN_T0
+; default_envs = custom32_TOUCHPIN_T02
 ; default_envs = esp8285_4CH_MagicHome
 ; default_envs = esp8285_4CH_H801
 ; default_envs = esp8285_5CH_H801
@@ -428,7 +429,7 @@ lib_ignore =
 [env:custom32_TOUCHPIN_T0]
 board = esp32dev
 platform = espressif32@2.0
-upload_port = COM7
+;upload_port = COM9
 upload_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32} -D TOUCHPIN=T0
