mpr121 und bme280 ok

--- a/platformio.ini
+++ b/platformio.ini
@@ -212,7 +212,9 @@ lib_deps =
     #OneWire@~2.3.5
     #milesburton/DallasTemperature@^3.9.0
   #For BME280 sensor uncomment following
-    #BME280@~3.0.0
+    BME280@~3.0.0
+  #For MPR121 using Adafruit lib
+    adafruit/Adafruit MPR121@^1.1.0
 lib_ignore =
     AsyncTCP
 
