sht3x usermod added

--- a/platformio.ini
+++ b/platformio.ini
@@ -215,6 +215,8 @@ lib_deps =
     BME280@~3.0.0
   #For MPR121 using Adafruit lib
     adafruit/Adafruit MPR121@^1.1.0
+  #For SHT3X 
+    sensirion/arduino-sht@^1.1.0
 lib_ignore =
     AsyncTCP
 
