added 7segment output

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@
 ; default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
 ; default_envs = esp32dev
-default_envs = custom32_TOUCHPIN_T0_usermod_dallas_temperature_C
+default_envs = custom32_cvsdev
 ;default_envs = custom32_TOUCHPIN_T0
 ; default_envs = custom32_TOUCHPIN_T02
 ; default_envs = esp8285_4CH_MagicHome
@@ -217,6 +217,7 @@ lib_deps =
     adafruit/Adafruit MPR121@^1.1.0
   #For SHT3X 
     sensirion/arduino-sht@^1.1.0
+    gordoste/LedControl@^1.2.0
 lib_ignore =
     AsyncTCP
 
